--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
 
     <!-- --------- CSS ---------- -->
-    <link rel="stylesheet" href="/portfolio//style.css">
+    <link rel="stylesheet" href="/portfolio/style.css">
 
     <!-- --------- FAVICON ---------- -->
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">.
@@ -81,7 +81,7 @@
           </div>
           <div class="featured-image">
             <div class="image">
-                <img src="/portfolio//akashsb.jpeg" alt="avatar">
+                <img src="/portfolio/akashsb.jpeg" alt="avatar">
             </div>
           </div>
           <div class="scroll-icon-box">
