--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -81,7 +81,7 @@
           </div>
           <div class="featured-image">
             <div class="image">
-                <img src="/portfolio/akashsb.jpeg" alt="avatar">
+                <img src="/portfolio/assets/akashsb.jpeg" alt="avatar">
             </div>
           </div>
           <div class="scroll-icon-box">
